--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "{{REPO_NAME}}"
+name = "rememberizer-mcp-test"
 version = "0.1.4"
-description = "{{CK_DESCRIPTION}}"
+description = "Test"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
@@ -23,7 +23,7 @@ dev = [
 ]
 
 [project.scripts]
-{{REPO_NAME}} = "mcp_server_rememberizer:main"
+rememberizer-mcp-test = "mcp_server_rememberizer:main"
 
 # ==== isort ====
 [tool.isort]
